--- a/LanguageSchool/MainWindow.xaml
+++ b/LanguageSchool/MainWindow.xaml
@@ -13,8 +13,8 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Grid.Row="0" Background="#FFE7FABF">
             <Image HorizontalAlignment="Left" Margin="50 0 0 0" Height="30"  Source="/Sourse/school_logo.png" />
-            <Button Margin="10 0 0 0" Content="Назад" Name="GoBackBtn"  Height="30" Background="#FF04A0FF" BorderBrush="{x:Null}"/>
-            <Button Margin="10 0 0 0" Content="Вернуться" Name="GoForwardBtn"  Height="30" Background="#FF04A0FF" BorderBrush="{x:Null}" FontFamily="Comic Sans MS"/>
+            <Button Margin="10 0 0 0" Content="Назад" Name="GoBackBtn"   BorderBrush="{x:Null}"/>
+            <Button Margin="10 0 0 0" Content="Вернуться" Name="GoForwardBtn"  BorderBrush="{x:Null}" FontFamily="Comic Sans MS"/>
         </StackPanel>
         <Frame Grid.Row="1" Background="Gray" Name="MainFrame" Grid.RowSpan="2">
             
