--- a/LanguageSchool/MainWindow.xaml
+++ b/LanguageSchool/MainWindow.xaml
@@ -9,20 +9,27 @@
 >
     <Grid Background="#FFE7FABF">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="37*"/>
-            <ColumnDefinition Width="363*"/>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="6*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Column="0"  Height="50"  Source="/Sourse/school_logo.png" />
-        <StackPanel Grid.Column="0" Grid.Row="1"  VerticalAlignment="Bottom" >
-                <Button Margin="10 0 0 0" Content="Назад" Name="GoBackBtn"   BorderBrush="{x:Null}"/>
-                <Button Margin="10 0 0 0" Content="Вернуться" Name="GoForwardBtn"  BorderBrush="{x:Null}" FontFamily="Comic Sans MS"/>
-            </StackPanel>
+        <Image Grid.Column="0"  Height="50"  Source="/Sourse/school_logo.png" Margin="0,2,0,2" />
+        <StackPanel Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom" Grid.RowSpan="2" >
+            <Ellipse Name="AdmModeCheck" HorizontalAlignment="Left" Visibility="Collapsed" Width="10" Height="10" Fill="Red"></Ellipse>
+            <Button Margin="10 0 0 0" Content="Назад" Name="GoBackBtn"   BorderBrush="{x:Null}"/>
+            <Button Margin="10 0 0 0" Content="Вернуться" Name="GoForwardBtn"  BorderBrush="{x:Null}"/>
+                <Button Margin="10 0 0 0" BorderBrush="{x:Null}" Click="Button_Click">
+                
+                <TextBlock TextAlignment="Center">Режим<LineBreak/>админа
+                </TextBlock></Button>
+            <PasswordBox x:Name="PassForAdm" Background="{x:Null}" Margin="10 0 0 0" FontSize="10"></PasswordBox>
+        </StackPanel>
 
-        <Frame Name="MainFrame" Grid.Row="1" Grid.RowSpan="2" Grid.Column="1" />
+        <Frame NavigationUIVisibility="Hidden" Name="MainFrame" Grid.Row="1" Grid.Column="1"  VerticalAlignment="Center" />
     </Grid>
 </Window>
