--- a/LanguageSchool/Pages/ServicePage.xaml
+++ b/LanguageSchool/Pages/ServicePage.xaml
@@ -11,11 +11,14 @@
 
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="196*"/>
+            <RowDefinition Height="29*"/>
         </Grid.RowDefinitions>
-        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Grid.Row="1">
+        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Grid.RowSpan="1">
             <WrapPanel Name="ServiceWrapPanel" Grid.Row="1">
-            
+
             </WrapPanel>
         </ScrollViewer>
+        <Button Visibility="Visible" x:Name="AddBtn" Margin="10,10,10,10" Height="NaN" Grid.Row="1" Content="Добавить"/>
     </Grid>
 </Page>
