--- a/LanguageSchool/Pages/ServicePage.xaml
+++ b/LanguageSchool/Pages/ServicePage.xaml
@@ -11,14 +11,37 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="196*"/>
-            <RowDefinition Height="29*"/>
+            <RowDefinition Height="32*"/>
+            <RowDefinition Height="161*"/>
+            <RowDefinition Height="32*"/>
         </Grid.RowDefinitions>
-        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Grid.RowSpan="1">
+        <StackPanel Orientation="Horizontal">
+        <ComboBox Name="SortCb" VerticalAlignment="Top" Grid.Row="0" HorizontalAlignment="Left"  Width="150" Height="35" SelectionChanged="SortCb_SelectionChanged">
+            <ComboBoxItem>По умолчанию</ComboBoxItem>
+            <ComboBoxItem>По возрастанию</ComboBoxItem>
+            <ComboBoxItem>По убыванию</ComboBoxItem>
+        </ComboBox>
+        <ComboBox Name="DiscountFilterCb" VerticalAlignment="Top" Grid.Row="0" HorizontalAlignment="Left"  Width="150" Height="35" SelectionChanged="DiscountFilterCb_SelectionChanged">
+            <ComboBoxItem>Все</ComboBoxItem>
+            <ComboBoxItem>От 0 до 5%</ComboBoxItem>
+            <ComboBoxItem>от 5 до 15%</ComboBoxItem>
+            <ComboBoxItem>от 15 до 30%</ComboBoxItem>
+            <ComboBoxItem>от 30 до 70%</ComboBoxItem>
+            <ComboBoxItem>от 70 до 100%</ComboBoxItem>
+        </ComboBox>
+            <TextBlock FontSize="18">По названию и описанию</TextBlock>
+            <TextBox Name="SearchTb" TextChanged="SearchTb_TextChanged"></TextBox>
+        </StackPanel>
+        
+        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Visible" Grid.RowSpan="1">
             <WrapPanel Name="ServiceWrapPanel" Grid.Row="1">
 
             </WrapPanel>
         </ScrollViewer>
-        <Button Visibility="Visible" x:Name="AddBtn" Margin="10,10,10,10" Height="NaN" Grid.Row="1" Content="Добавить"/>
+        <StackPanel Margin="200 0 0 0" Orientation="Horizontal" Grid.Row="2">
+            <Button Width="400" Visibility="Visible" x:Name="AddBtn" Margin="10,10,10,10" Height="NaN"  Content="Добавить"/>
+            <TextBox Name="CountOfItems" VerticalAlignment="Center"></TextBox>
+           </StackPanel>
+
     </Grid>
 </Page>
