--- a/LanguageSchool/App.xaml
+++ b/LanguageSchool/App.xaml
@@ -13,9 +13,18 @@
             <Setter Property="FontSize" Value="10"/>
         </Style>
         <Style TargetType="Button">
-            
             <Setter Property="Background" Value="#FF04A0FF"/>
             <Setter Property="Height" Value="30"/>
+        </Style>
+        <Style TargetType="ComboBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Margin" Value="10"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Margin" Value="10"/>
         </Style>
     </Application.Resources>
 </Application>
