--- a/LanguageSchool/Components/ServiceUserControl.xaml
+++ b/LanguageSchool/Components/ServiceUserControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="200" d:DesignWidth="550"
              >
-    <Border Margin="10 10 10 10" BorderThickness="3" BorderBrush="Gray">
+    <Border Name="MainBorder" Margin="10 10 10 10" BorderThickness="3" BorderBrush="Gray">
     <Grid Width="550">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -28,7 +28,7 @@
             <TextBlock HorizontalAlignment="Left" Name="DiscountTB" Grid.Column="1" Grid.Row="2"></TextBlock>
         <StackPanel HorizontalAlignment="Left" Grid.Column="1" Grid.Row="4" Orientation="Horizontal">
             <Button Padding="4" BorderThickness="1" Margin="40 0 10 10" Content="Редактировать" x:Name="EditBtn" />
-        <Button Padding="4" BorderThickness="1" Margin="0 0 0 10" Content="Удалить" x:Name="DeleteBtn" />
+        <Button Padding="4" BorderThickness="1" Margin="0 0 0 10" Content="Удалить" x:Name="DeleteBtn" Click="DeleteBtn_Click" />
 
         </StackPanel>
     </Grid>
