--- a/LanguageSchool/MainWindow.xaml
+++ b/LanguageSchool/MainWindow.xaml
@@ -18,7 +18,8 @@
             <RowDefinition Height="6*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Column="0"  Height="50"  Source="/Sourse/school_logo.png" Margin="0,2,0,2" />
+        <Image Source="/Sourse/school_logo.png" />
+        <TextBlock HorizontalAlignment="Center" Grid.Column="1" x:Name="MainTb"></TextBlock>
         <StackPanel Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom" Grid.RowSpan="2" >
             <Ellipse Name="AdmModeCheck" HorizontalAlignment="Left" Visibility="Collapsed" Width="10" Height="10" Fill="Red"></Ellipse>
             <Button Margin="10 0 0 0" Content="Назад" Name="GoBackBtn"   BorderBrush="{x:Null}" Click="GoBackBtn_Click"/>
