--- a/LanguageSchool/MainWindow.xaml
+++ b/LanguageSchool/MainWindow.xaml
@@ -6,30 +6,36 @@
         xmlns:local="clr-namespace:LanguageSchool"
         mc:Ignorable="d"
         Title="LanguageSchool" Height="600" Width="1000"
+        MinHeight="800" MinWidth="1200"
 >
     <Grid Background="#FFE7FABF">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="8*"/>
+            <ColumnDefinition Width="18*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"/>
-            <RowDefinition Height="6*"/>
+            <RowDefinition Height="8*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Image Source="/Sourse/school_logo.png" />
         <TextBlock HorizontalAlignment="Center" Grid.Column="1" x:Name="MainTb"></TextBlock>
         <StackPanel Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom" Grid.RowSpan="2" >
             <Ellipse Name="AdmModeCheck" HorizontalAlignment="Left" Visibility="Collapsed" Width="10" Height="10" Fill="Red"></Ellipse>
-            <Button Margin="10 0 0 0" Content="Назад" Name="GoBackBtn"   BorderBrush="{x:Null}" Click="GoBackBtn_Click"/>
-                <Button Margin="10 0 0 0" BorderBrush="{x:Null}" Click="Button_Click">
-                
-                <TextBlock TextAlignment="Center">Режим<LineBreak/>админа
+            <Button  Margin="10 0 0 0"  Name="GoBackBtn"   BorderBrush="{x:Null}" Click="GoBackBtn_Click">
+                <StackPanel>
+                    <TextBlock FontSize="10">
+                        Назад
+                    </TextBlock>
+                </StackPanel>
+            </Button>
+            <Button Margin="10 0 0 0" BorderBrush="{x:Null}" Click="Button_Click">
+                <TextBlock FontSize="10" TextAlignment="Center">Режим<LineBreak/>админа
                 </TextBlock></Button>
             <PasswordBox x:Name="PassForAdm" Background="{x:Null}" Margin="10 0 0 0" FontSize="10"></PasswordBox>
         </StackPanel>
 
-        <Frame NavigationUIVisibility="Hidden" Name="MainFrame" Grid.Row="1" Grid.Column="1"  VerticalAlignment="Center" />
+        <Frame HorizontalAlignment="Center" NavigationUIVisibility="Hidden" Name="MainFrame" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" />
     </Grid>
 </Window>
